Day12/nginx-deploy.yml
---
apiVersion: v1
kind: Namespace 
metadata:
  name: tektutor 
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: tektutor 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.18
        imagePullPolicy: IfNotPresent
        name: nginx
...
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: tektutor
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - nodePort: 32000
    port: 80 
    protocol: TCP
    targetPort: 80
...
