Day12/network-policy-namespace-selector.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx-from-different-namespaces
  namespace: default 
spec:
  podSelector:
    matchLabels:
       app: nginx
  ingress:
    - from:
        - podSelector:
          namespaceSelector:
             matchLabels:
               app: client2
